# sigaex/src/main/java/br/gov/jfrj/siga/ex/api/v1/DownloadJwtFilenameGet.java
@@ -27,17 +27,23 @@ public class DownloadJwtFilenameGet implements IDownloadJwtFilenameGet {
 		String principal = (String) map.get("principal");
 		String uuid = (String) map.get("uuid");
 		String doc = (String) map.get("doc");
-		String type = (String) map.get("typ");
+		String filename = (String) map.get("fname");
+		String kind = (String) map.get("knd");
+		String contenttype = (String) map.get("typ");
 		String disposition = "attachment".equals(req.disposition) ? "attachment" : "inline";
-		if (!"download".equals(type))
+		if (!"download".equals(kind))
 			throw new Exception("Tipo de token JWT inválido");
 
 		// PDF Completo
-		String bufName = PdfCompleto.getBufName(uuid, doc);
+		String bufName = DownloadAssincrono.getBufName(uuid, contenttype, doc);
 
-		resp.contentdisposition = disposition + ";filename=" + doc + "-completo.pdf";
+		if (filename != null)
+			resp.contentdisposition = disposition + ";filename=" + filename;
+		else
+			resp.contentdisposition = disposition + ";filename=" + doc + "-completo."
+					+ ("application/pdf".equals(contenttype) ? "pdf" : "html");
 		resp.contentlength = (long) new File(bufName).length();
-		resp.contenttype = "application/pdf";
+		resp.contenttype = contenttype;
 		resp.inputstream = new FileInputStream(bufName);
 	}
 
@@ -54,7 +60,8 @@ public class DownloadJwtFilenameGet implements IDownloadJwtFilenameGet {
 		return map;
 	}
 
-	public static String jwt(String principal, String uuid, String doc) throws Exception {
+	public static String jwt(String principal, String uuid, String doc, String contenttype, String filename)
+			throws Exception {
 		final long iat = System.currentTimeMillis() / 1000L; // issued at claim
 		// token expires in 12h
 		final long exp = iat + 12 * 60 * 60L;
@@ -72,7 +79,10 @@ public class DownloadJwtFilenameGet implements IDownloadJwtFilenameGet {
 			claims.put("uuid", uuid);
 		if (doc != null)
 			claims.put("doc", doc);
-		claims.put("typ", "download");
+		if (filename != null)
+			claims.put("fname", filename);
+		claims.put("typ", contenttype);
+		claims.put("knd", "download");
 
 		final String jwt = signer.sign(claims);
 		return jwt;
